--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   "dependencies": {
     "@types/chai": "^4.2.14",
     "@types/node": "^14.14.6",
-    "knex": "^0.21.12"
+    "knex": "^0.21.12",
+    "koa": "^2.13.0"
   },
   "devDependencies": {
     "@danielemeryau/logger": "^0.1.1",
     "@danielemeryau/prettier-config": "0.0.6",
+    "@types/koa": "^2.11.6",
+    "axios": "^0.21.0",
     "bunyan": "^1.8.14",
     "chai": "^4.2.0",
     "ts-node": "^9.0.0",
