--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es2018",
+    "lib": ["ES2020"],
     "module": "commonjs",
-    "lib": ["es2018"],
+    "target": "ES2020",
     "declaration": true,
     "sourceMap": true,
     "outDir": "./dist",
